<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Ипотечный калькулятор</string>

    <string name="tab_initial_data">Исходные данные</string>
    <string name="tab_results">Результаты</string>

    <string name="ok">ОК</string>
    <string name="cancel">Отмена</string>
    <string name="add">Добавить</string>

    <string name="credit_sum">Сумма кредита</string>
    <string name="credit_duration_month">Срок кредита, мес</string>
    <string name="actual_credit_duration">Фактический срок кредита, мес</string>
    <string name="percentage">Процентная ставка</string>
    <string name="monthly_payment">Ежемесячный платеж</string>
    <string name="overall_amount">Общая сумма выплат</string>
    <string name="overall_percents">Общая сумма процентов</string>
    <string name="calculate">Рассчитать</string>

    <string name="inject_payment">Досрочные платежи</string>
    <string name="payments_distribution">Распределение платежей</string>
    <string name="reminder_distribution">Остаток по месяцам</string>

    <string name="inject_amount">Сумма</string>
    <string name="inject_month">Месяц внесения</string>
    <string name="required_fields">Красным отмечены обязательные поля</string>

    <string name="unable_to_calculate">Невозможно произвести расчет</string>
    <string name="no_required_fields">Для расчета необходимо задать следующие параметры:</string>
    <string name="invalid_percent">Процентная ставка должна быть больше 0</string>
    <string name="zero_repay">Некорректные исходные данные</string>
</resources>
